Corrigido toList problem